...
                    elevation = CardDefaults.cardElevation(defaultElevation = 4.dp),
                    colors = CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.secondaryContainer),
                    enabled = currentUserId != null && mainViewModel.residents.value.size > 1
                ) {
                    Icon(
                        Icons.Default.Add,
                        contentDescription = "Add Payment",
                        tint = MaterialTheme.colorScheme.onTertiaryContainer,
                        modifier = Modifier.padding(8.dp) // Add padding so the icon doesn't touch the edges
                    )
                }
            }
            Text(
                text = "Pay with Venmo",
                style = MaterialTheme.typography.headlineSmall,
                color = MaterialTheme.colorScheme.primary,
                modifier = Modifier.weight(2f) // Give it more weight to occupy the center
            )
            Box(modifier = Modifier.weight(1f), contentAlignment = Alignment.CenterEnd) {
                FilledTonalButton(
...
                context.startActivity(Intent(Intent.ACTION_VIEW, playStoreUri))
            }
        },
        modifier = modifier,
        enabled = payToVenmoUsername != null  // Disable if no venmo username
    ) {
        Text(text = "Pay via Venmo")
    }
}

@Composable
fun PaymentReminderButton(
    payment: Payment,
...

    var amount by remember { mutableStateOf("") }
    var memo by remember { mutableStateOf("") }
    var expanded by remember { mutableStateOf(false) }
    var selectedResident by remember { mutableStateOf<LocalResident?>(null) }
    var paymentDirection by remember { mutableStateOf(PaymentDirection.PAYING) }
    val options = listOf("Pay To", "Request From")
    var dueDate by remember { mutableStateOf<Date?>(null) }
    val showDatePicker = remember { mutableStateOf(false) }

    if (showDatePicker.value) {
        val datePickerState = rememberDatePickerState()
        DatePickerDialog(
...
                        showDatePicker.value = false
                        // Convert the selected Long to a Date object
                        datePickerState.selectedDateMillis?.let {
                            dueDate = Date(it)
                        }
                    }
                ) { Text("OK") }
            },
            dismissButton = {
                TextButton(onClick = { showDatePicker.value = false }) { Text("Cancel") }
            }
        ) {
            DatePicker(state = datePickerState)
        }
    }
    AlertDialog(
        onDismissRequest = onDismiss,
        title = { Text("Add New Payment Task") },
        text = {
            Column(verticalArrangement = Arrangement.spacedBy(8.dp)) {
                // select if requesting or paying
                SingleChoiceSegmentedButtonRow(modifier = Modifier.fillMaxWidth()) {
                    options.forEachIndexed { index, label ->
                        SegmentedButton(
...
                    expanded = expanded,
                    onExpandedChange = { expanded = !expanded }
                ) {
                    OutlinedTextField(
                        modifier = Modifier.menuAnchor(),
                        readOnly = true,
                        value = selectedResident?.name ?: "Select a person",
                        label = { Text(if (paymentDirection == PaymentDirection.PAYING) "Pay To" else "Request From") },
                        onValueChange = {},
                        trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded = expanded) },
                    )
                    ExposedDropdownMenu(
                        expanded = expanded,
...
                }

                // Amount Field
                OutlinedTextField(
                    value = amount,
                    onValueChange = { if (it.all { char -> char.isDigit() || char == '.' }) amount = it },
                    label = { Text("Amount") },
                    prefix = { Text("$") },
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number)
                )

                // Memo Field
                OutlinedTextField(
                    value = memo,
                    onValueChange = { memo = it },
                    label = { Text("Memo (e.g., Groceries)") }
                )
                Row(
                    modifier = Modifier.fillMaxWidth(),
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.SpaceBetween
                ) {
                    // Display the selected date or a placeholder
                    Text(
                        text = dueDate?.let {
                            val sdf = SimpleDateFormat("MMM d, yyyy", Locale.getDefault())
                            sdf.timeZone = TimeZone.getTimeZone("UTC")
                            "Due: ${sdf.format(it)}"
                        } ?: "No due date set",
                        style = MaterialTheme.typography.bodyMedium,
                        color = MaterialTheme.colorScheme.onSurfaceVariant
                    )

                    // Button to open the date picker
                    TextButton(onClick = { showDatePicker.value = true }) {
                        Text(if (dueDate == null) "Set Date" else "Change")
                    }
                }
            }
        },
        confirmButton = {
            Button(
...
                        onConfirm(payFromId, payToId, finalAmount, memo, dueDate)
                    }
                },
                // Disable button until all fields are valid
                enabled = selectedResident != null && (amount.toDoubleOrNull() ?: 0.0) > 0.0 && memo.isNotBlank()
            ) {
                Text("Add")
            }
        },
        dismissButton = {
            TextButton(onClick = onDismiss) {
                Text("Cancel")
            }
...
