...
            priority = true
        ),
        Chore(
            choreID = 2,
            name = "Vacuum Living Room",
            description = "Vacuum the carpet and under the furniture in the living room.",
            assignedTo = "Bob",
            householdID = 1,
            userID = 2,
            dueDate = "November 15, 2025",
            completed = false,
            priority = true
        ),
...
